<resources>
    <string name="app_name">DocCheck</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_dashboard">DASHBOARD</string>
    <string name="menu_profile">PROFILE</string>
    <string name="menu_appointment">APPOINTMENT</string>
    <string name="menu_privacy">PRIVACY</string>
    <string name="menu_blogs">BLOGS</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_terms">TERMS AND CONDITIONS</string>
    <string name="menu_logout">LOGOUT</string>F
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="patient_list"> PATIENTS</string>
    <string name="add_patient">ADD NEW PATIENT</string>
    <string name="permission_not_granted">PermissionGranted</string>
    <string name="some_err">Some Error Found</string>
    <string name="select_capture_image">Select_Image</string>
    <string name="file_provider_name" translatable="false">.fileProvider</string>
    <string name="nav_logout">Logout?</string>
    <string name="patient_record">PATIENT DETAILS</string>
    <string name="prescriptions">PRISCRIPTIONS</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">NOTIFICATIONS</string>
    <string name="lab_tests">LAB TESTS</string>
    <string name="navigation_home">Home</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="lab_test">LAB TESTS</string>
    <string name="account">Account</string>
    <string name="update_detail">UPDATE DETAIL</string>
    <string name="successful_message">Updated Successfully</string>
    <string name="mediacal_records">MEDICAL RECORDS</string>
    <string name="add_record">ADD RECORD</string>
    <string name="home">HOME</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title">MEDICAL RECORDS</string>
    <string name="appointment_toolbar_title">APPOINTMENTS</string>
    <string name="add_patient_toolbar_title">ADD NEW PATIENT</string>
    <string name="login_toolbar_title">SIGN IN</string>
    <string name="notification_toolbar_title">NOTIFICATIONS</string>
    <string name="patient_update_toolbar_title">UPDATE PATIENT</string>
    <string name="edit_doctor_profile">UPDATE PROFILE</string>
    <string name="share_pref">SHARED_PREF</string>
    <string name="empty_field_message">Field Can\'t be Empty</string>
    <string name="invalid_email_message">Invalid Email Id</string>
    <string name="Phone_number_validation">\" 10 Number Digit Require\"</string>
    <string name="profile_update_message">Successfully Updated Patient Profile</string>
    <string name="doctor_profile_edit_message">Successfully Edited Doctor Profile</string>
    <string name="mendatory_field_message">Please fill All the Mandatory Field</string>
    <string name="registered_profile_message">\"Registered Successfully \"</string>
    <string name="permission_granted_message">Permission Not Granted</string>
    <string name="login_fail_message">Login Failed</string>
    <string name="weekly_appointment_fragment_title">WEEKLY APPOINTMENTS</string>
    <string name="my_patient_list_toolbar_title">MY PATIENT LIST</string>
    <string name="upload_report_fragment_title">ADD NEW REPORT</string>
    <string name="visit_date_time"><![CDATA[Visit Date & Time:]]></string>
    
    <string-array name="gender">
        <item> m </item>
        <item>f</item>
        <item>others </item>
    </string-array>
</resources>