<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_medical_records"
            android:icon="@drawable/ic_baseline_dashboard_24"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/ic_baseline_face_24"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/navigation_lab"
            android:icon="@drawable/ic_baseline_science_24"
            android:title="@string/lab_tests"/>

        <item
            android:id="@+id/navigation_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_notifications" />

        <!--  <item
              android:id="@+id/navigation_appointment"
              android:icon="@drawable/ic_baseline_date_range_24"
              android:title="@string/menu_appointment" />
  -->
        <item
            android:id="@+id/navigation_privacy"
            android:icon="@drawable/ic_baseline_privacy_tip_24"
            android:title="@string/menu_privacy" />
        <item
            android:id="@+id/navigation_faq"
            android:icon="@drawable/ic_baseline_chat_24"
            android:title="@string/menu_faq" />
        <item
            android:id="@+id/navigation_terms"
            android:icon="@drawable/ic_baseline_policy_24"
            android:title="@string/menu_terms" />

        <item
            android:id="@+id/navigation_logout"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/menu_logout"/>
    </group>
</menu>